--- a/gb/19/11/3/n11630309.md
+++ b/gb/19/11/3/n11630309.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rwwdnw303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rwwdnw303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rwwdnw303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rwwdnw303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rwwdnw303/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rwwdnw303/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rwwdnw303/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rwwdnw303/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>客家名物票选　基隆海洋广场充满客家味</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/c050949c1422985d2a29383bae219031-600x400.jpg" />
 <h6>基隆海洋广场举办客家伴手礼选拔推广活动。（陈秀媛／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年11月03日讯】（大纪元记者陈秀媛台湾基隆报导）客家委员会为推广浪漫台三线客家名物，首次以外国观光客为对象，举办客家<ahref="https://github.com/rwwdnw303/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>选拔，3日在基隆海洋广场举办推广活动，现场展示客家美食和伴手礼，充满客家人文特色，也传递客家文化记忆。</p>
-<p>台三线客家名物选拔是由专家严选出食品组20件、非食品组15件，合计35件名物进入复选，最近分别在桃园机场、基隆海洋广场等外国观光客进出的地方举办<ahref="https://github.com/rwwdnw303/djy/blob/master/gb/tag/%E7%A5%A8%E9%80%89.md#1">票选</a>活动，投票至11月20日截止。海洋广场现场也请来日籍旅游达人濑上刚为名物加持。</p>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/d13b96223182c8254c75474258df959d-450x338.jpg" alt="展羡公司游智穗女士以筷子礼盒参展。" width="500" b="338" /><figcaption class="wp-caption-text">展羡公司游智穗女士以筷子礼盒参展。（陈秀媛／大纪元）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/a49ce5952b8e038a3350d1564711b3a1-450x338.jpg" alt="现场展示客家伴手礼，充满客家人文特色。" width="500" b="338" /><figcaption class="wp-caption-text">现场展示客家<ahref="https://github.com/rwwdnw303/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>，充满客家人文特色。（陈秀媛／大纪元）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/d4d740b2ca2b29177036d3835f43843c-450x338.jpg" alt="现场展示客家伴手礼，充满客家人文特色。" width="500" b="338" /><figcaption class="wp-caption-text">现场展示客家伴手礼，充满客家人文特色。（陈秀媛／大纪元）</figcaption></figure>
+<p>【大纪元2019年11月03日讯】（大纪元记者陈秀媛台湾基隆报导）客家委员会为推广浪漫台三线客家名物，首次以外国观光客为对象，举办客家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>选拔，3日在基隆海洋广场举办推广活动，现场展示客家美食和伴手礼，充满客家人文特色，也传递客家文化记忆。</p>
+<p>台三线客家名物选拔是由专家严选出食品组20件、非食品组15件，合计35件名物进入复选，最近分别在桃园机场、基隆海洋广场等外国观光客进出的地方举办<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%A8%E9%80%89.md#1">票选</a>活动，投票至11月20日截止。海洋广场现场也请来日籍旅游达人濑上刚为名物加持。</p>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/d13b96223182c8254c75474258df959d-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/11/d13b96223182c8254c75474258df959d-450x338.jpg" alt="展羡公司游智穗女士以筷子礼盒参展。" width="500" b="338" /></a><figcaption class="wp-caption-text">展羡公司游智穗女士以筷子礼盒参展。（陈秀媛／大纪元）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/a49ce5952b8e038a3350d1564711b3a1-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/11/a49ce5952b8e038a3350d1564711b3a1-450x338.jpg" alt="现场展示客家伴手礼，充满客家人文特色。" width="500" b="338" /></a><figcaption class="wp-caption-text">现场展示客家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>，充满客家人文特色。（陈秀媛／大纪元）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/d4d740b2ca2b29177036d3835f43843c-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/11/d4d740b2ca2b29177036d3835f43843c-450x338.jpg" alt="现场展示客家伴手礼，充满客家人文特色。" width="500" b="338" /></a><figcaption class="wp-caption-text">现场展示客家伴手礼，充满客家人文特色。（陈秀媛／大纪元）</figcaption></figure>
 <p>客委会副主委范佐铭表示，依据交通部观光局107年来台旅客消费及动向调查显示，国外旅客来台观光主要因素，第一名为美食和特色小吃，第二名是风景，第三名为购物。</p>
 <p>基隆市观光行销处处长曾姿雯指出，自己也是客家人，旅客除了好吃、好玩的之外，最重要是能够把满满的回忆带回家，现场伴手礼充满浓浓的客家味，客家文化值得珍惜和保存。</p>
 <p>基隆市文化局副局长李添庆说，希望基隆能协助客家产业走上国际化。</p>
@@ -21,48 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/7/1/n11357294.md#1">台中珍奶节登场 票选独特午茶魅力</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/7/7/n11369898.md#1">日本票选亲子旅游冠军 水族馆寓教于乐</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/7/12/n11381244.md#1">《首席指挥家》荣登台北电影节观众票选榜</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/8/15/n11454405.md#1">钟孟宏新作入选多伦多影展 将角逐观众票选奖</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/8/19/n11463445.md#1">鼓励身障青年 屏东7身障团体促销中秋伴手礼</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/8/21/n11467660.md#1">嘉义市2019年中秋爱心伴手礼促销活动</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/8/22/n11470170.md#1">2019屏东伴手礼暨好店征选 30店家脱颖而出</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/8/25/n11476486.md#1">嘉义市特色美食及伴手礼征选8/30报名截止</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/10/1/n11559602.md#1">云林伴手礼评选出炉  县府举行颁奖典礼</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/10/11/n11582064.md#1">嘉市伴手礼网路票选活动开跑  10/24截止</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/1/n11357294.md#1">台中珍奶节登场 票选独特午茶魅力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/7/n11369898.md#1">日本票选亲子旅游冠军 水族馆寓教于乐</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/12/n11381244.md#1">《首席指挥家》荣登台北电影节观众票选榜</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/15/n11454405.md#1">钟孟宏新作入选多伦多影展 将角逐观众票选奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/19/n11463445.md#1">鼓励身障青年 屏东7身障团体促销中秋伴手礼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/21/n11467660.md#1">嘉义市2019年中秋爱心伴手礼促销活动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/22/n11470170.md#1">2019屏东伴手礼暨好店征选 30店家脱颖而出</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/25/n11476486.md#1">嘉义市特色美食及伴手礼征选8/30报名截止</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/1/n11559602.md#1">云林伴手礼评选出炉  县府举行颁奖典礼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/11/n11582064.md#1">嘉市伴手礼网路票选活动开跑  10/24截止</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278972.md#1" target="_blank">阚神州：中共行株连之罪恶 肇残民之祸</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/6/28/n12217817.md#1">袭人，即是人生本身</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/8/30/n12367994.md#1">古今六大预言 2020年前后的大交集(上)</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/19/n12414857.md#1">【十字路口】中共24年最激烈挑衅 欲台海开战？</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/16/n12408802.md#1">【罗厨寻味】粥烫东星斑</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/20/n12418048.md#1">【新闻第一现场】北京传爆炸 火光冲天陆媒噤声</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/19/n12416159.md#1">余茂春回应中共“族谱”除名：闹剧可休矣</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12414308.md#1">【新闻看点】美吁关系对等 崔天凯威胁踩红线</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/19/n12415378.md#1">大陆女网红直播时遭前夫淋汽油烧身命危</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12414073.md#1">高以翔黄鸿升相继猝逝 医生揭青壮年六大警讯</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12414628.md#1">被郭富城反复说丑 杨千嬅一度黑脸场面尴尬</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12414339.md#1">杨丞琳被昵称小鬼 黄鸿升《学妹》编号藏密码</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12413091.md#1">黄鸿升解剖结果疑心血管问题 详情待鉴定报告</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/19/n12416066.md#1">任贤齐开唱尾声爆哭 泪忆黄鸿升：我会想你的</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12413918.md#1">黄鸿升猝逝死因初判心血管病 独居者如何自救？</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12413005.md#1">泰国上万只鸭子冲入稻田吃害虫 场面壮观</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/18/n12412765.md#1">朝鲜战机飞行员使用蕾丝花边靠枕 网民笑了</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/20/n12416956.md#1">印度边境秘密部队多由藏人组成 原因为何？</a></li>
-<li><a href="https://github.com/rwwdnw303/djy/blob/master/gb/20/9/4/n12381760.md#1">【线上活动】远离骨折 骨质疏松！保骨大作战</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rwwdnw303/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rwwdnw303/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/3/n11630309.htm">客家名物票选　基隆海洋广场充满客家味</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/3/n11630309.htm">客家名物票选　基隆海洋广场充满客家味</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rwwdnw303/djy/blob/master/gb/19/11/3/n11630309.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rwwdnw303/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rwwdnw303/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rwwdnw303/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rwwdnw303/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rwwdnw303/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/11/3/n11630309.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
